Add UserVersion msbuild var

--- a/Carbon.Core/.msbuild/Metadata.props
+++ b/Carbon.Core/.msbuild/Metadata.props
@@ -3,8 +3,8 @@
 	<!-- 
 		Sets the version based on the env context
 	-->
-	<PropertyGroup Condition="'$(ForceVersion)' != ''">
-		<Version>$(ForceVersion)</Version>
+	<PropertyGroup Condition="'$(UserVersion)' != ''">
+		<Version>$(UserVersion)</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
