--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -45,7 +45,7 @@ jobs:
           echo "clock=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "version=$(date +'0.%Y.%V.%j')" >> $GITHUB_OUTPUT
+          echo "version=$(date +'0.%Y.%q%j.%M%S')" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
