--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -21,11 +21,12 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      date:  ${{ steps.step1.outputs.date }}
-      clock: ${{ steps.step1.outputs.clock }}
-      tag:   ${{ steps.step1.outputs.tag }}
-      ref:   ${{ steps.step1.outputs.ref }}
-      wipe:  ${{ steps.step1.outputs.wipe }}
+      date:    ${{ steps.step1.outputs.date }}
+      clock:   ${{ steps.step1.outputs.clock }}
+      tag:     ${{ steps.step1.outputs.tag }}
+      ref:     ${{ steps.step1.outputs.ref }}
+      wipe:    ${{ steps.step1.outputs.wipe }}
+      version: ${{ steps.step1.outputs.version }}
 
     steps:
       #- name: 🪵 Log environment
@@ -44,6 +45,7 @@ jobs:
           echo "tag=$(date +'%Yd%j')" >> $GITHUB_OUTPUT
           echo "ref=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "wipe=$( [ $(date +%u) -eq 4 ] && [ $(date +%d) -le 7 ] && echo true || echo false )" >> $GITHUB_OUTPUT
+          echo "version=$(date +'0.%Y.%q%j.%M%S')" >> $GITHUB_OUTPUT
 
   # BUILD LINUX ----------------------------------------------------------------
   build-linux:
@@ -76,6 +78,7 @@ jobs:
     - name: 🐧 Built Carbon on Linux
       shell: bash
       run: |
+        export VERSION=${{ needs.bootstrap.outputs.version }}
         ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh ReleaseUnix
         
     - name: ⬆️ Upload the artifacts
@@ -112,6 +115,7 @@ jobs:
     - name: 🪟 Built Carbon on Windows
       shell: cmd
       run: |
+        set VERSION=${{ needs.bootstrap.outputs.version }}
         %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Release
 
     - name: ⬆️ Upload the artifacts
