--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -67,7 +67,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
 
-    - name: 🪚 Setup the Carbon build environment
+    - name: 🔨 Setup the Carbon build environment
       shell: bash
       run: |
         ${GITHUB_WORKSPACE}/Tools/Build/linux/bootstrap.sh
@@ -103,12 +103,12 @@ jobs:
       with:
         dotnet-version: 6.0.x
 
-    - name: 🪚 Setup the Carbon build environment
+    - name: 🔨 Setup the Carbon build environment
       shell: cmd
       run: |
         %GITHUB_WORKSPACE%\Tools\Build\win\bootstrap.bat
 
-    - name: 🪟 Built Carbon on Windows
+    - name: 🔨 Built Carbon on Windows
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
@@ -125,7 +125,7 @@ jobs:
   # RELEASE --------------------------------------------------------------------
   release:
     name: 💾 Release
-    needs: [ "build-linux", "build-windows" ]
+    needs: [ "bootstrap", "build-linux", "build-windows" ]
     runs-on: ubuntu-latest
 
     steps:
@@ -136,6 +136,10 @@ jobs:
         tag_name: staging_build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: 💤 Sleep for 30 seconds
+      run: sleep 30s
+      shell: bash
 
     - name: ⬇️ Download artifacts
       uses: actions/download-artifact@v3
@@ -152,7 +156,7 @@ jobs:
         draft: false
         prerelease: true
         tag_name: staging_build
-        name: 'Carbon Build (staging)'
+        name: 'Staging Carbon Build (v${{ needs.bootstrap.outputs.version }})'
         body: |
           This is a development build of Carbon based on the `staging` branch.
           
