--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -4,8 +4,12 @@
 		<!-- System libs -->
 		<Reference Include="System.Core" />
 		<Reference Include="System.Data" />
+		<Reference Include="System.Drawing" />
+		<Reference Include="System.Globalization" />
+		<Reference Include="System.Management" />
 		<Reference Include="System.Net.Http" />
 		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Xml.Serialization" />
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 
