--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -24,6 +24,9 @@
 				<!-- We want to override corelib to have the new lang features -->
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
 				<NoWarn>CS1685</NoWarn>
+
+				<!-- -->
+				<ConfigurationNormalized>Release</ConfigurationNormalized>
 			</PropertyGroup>
 		</When>
 		<Otherwise>
@@ -37,6 +40,9 @@
 
 				<!-- We want to override corelib to have the new lang features -->
 				<NoWarn>CS1685</NoWarn>
+
+				<!-- -->
+				<ConfigurationNormalized>Debug</ConfigurationNormalized>
 			</PropertyGroup>
 		</Otherwise>
 	</Choose>
