--- a/Carbon.Core/.editorconfig
+++ b/Carbon.Core/.editorconfig
@@ -30,7 +30,7 @@ charset = utf-8-bom
 ###############################
 # .NET Coding Conventions     #
 ###############################
-[*.{cs,vb}]
+[*.cs]
 # Organize usings
 dotnet_sort_system_directives_first = true
 # this. preferences
@@ -99,7 +99,7 @@ csharp_style_conditional_delegate_call = true:suggestion
 # Modifier preferences
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
 # Expression-level preferences
-csharp_prefer_braces = true:silent
+csharp_prefer_braces = when_multiline:warning
 csharp_style_deconstructed_variable_declaration = true:suggestion
 csharp_prefer_simple_default_expression = true:suggestion
 csharp_style_prefer_local_over_anonymous_function = true:suggestion
@@ -140,7 +140,7 @@ csharp_space_between_empty_square_brackets = false
 csharp_space_between_square_brackets = false
 # Wrapping preferences
 csharp_preserve_single_line_statements = true
-csharp_preserve_single_line_blocks = true
+csharp_preserve_single_line_blocks = false
 
 # Shell scripts
 [*.sh]
