--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -17,7 +17,7 @@
 		<ProjectReference Include="$(SolutionDir)\Carbon.SDK\Carbon.SDK.csproj" Private="false" Condition="!$(Product.Contains('Carbon.SDK'))" />
 
 		<!-- Roslyn -->
-		<PackageReference Include="Roslynator.CSharp" Version="4.2.0" Private="false" />
+		<PackageReference Include="Roslynator.CSharp" Version="4.2.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0-1.final" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.6.0-1.final" />
 
