--- a/Carbon.Core/.editorconfig
+++ b/Carbon.Core/.editorconfig
@@ -140,7 +140,7 @@ csharp_space_between_empty_square_brackets = false
 csharp_space_between_square_brackets = false
 # Wrapping preferences
 csharp_preserve_single_line_statements = true
-csharp_preserve_single_line_blocks = false
+csharp_preserve_single_line_blocks = true
 
 # Shell scripts
 [*.sh]
